adding cards as tiles

--- a/RummiKub.GamePlay/RummiKub.GamePlay.csproj
+++ b/RummiKub.GamePlay/RummiKub.GamePlay.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Resources\Resources.csproj" />
+    <ProjectReference Include="..\Tools.Core\Tools.Core.csproj" />
+  </ItemGroup>
+
 </Project>
