--- a/RummiKub.GamePlay.Test/RummiKub.GamePlay.Test.csproj
+++ b/RummiKub.GamePlay.Test/RummiKub.GamePlay.Test.csproj
@@ -7,6 +7,7 @@
 
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
+    <OutputType>WinExe</OutputType>
   </PropertyGroup>
 
   <ItemGroup>
@@ -17,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Resources\Resources.csproj" />
     <ProjectReference Include="..\RummiKub.GamePlay\RummiKub.GamePlay.csproj" />
     <ProjectReference Include="..\Tools.Core\Tools.Core.csproj" />
   </ItemGroup>
